added more contect within index, about, and contact

--- a/about.html
+++ b/about.html
@@ -9,6 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Final Site Project</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/about.css" type="text/css">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -20,7 +23,25 @@
             </ul>
         </nav>
     </header>
-   
+    <main class="about-main">
+        
+    </main>
+    <section class="about-section">
+       <div class="dividers">
+           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, omnis ut! Commodi, iusto dolorem. Nesciunt, nostrum sint hic ducimus eaque at in inventore non atque!</p>
+       </div>
+       <div class="dividers">
+
+       </div>
+       <div class="dividers"></div>
+       <div class="dividers">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam, itaque quisquam, earum repudiandae ipsam sed tenetur provident, nulla fugit modi laboriosam beatae temporibus sit accusantium?</p>
+       </div>
+       <div class="dividers">
+           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, cupiditate dignissimos exercitationem dicta maiores, blanditiis ad illo officiis aspernatur atque nam obcaecati numquam reprehenderit, deserunt pariatur laboriosam expedita similique doloribus. Assumenda maxime officia fugiat vitae harum eos porro delectus, fugit voluptas, veritatis aspernatur est nemo. Explicabo, fuga voluptate? Sequi!</p>
+       </div>
+       <div class="dividers"></div>
+    </section>
     <footer class="footer">
         <div class="copy">
             <p>&copy;All Rights Reserved JohnPaul Vander Poel</p>
