--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Final Site Project</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
          <nav class="nav-bar">
             <ul>
-                <li class="list-item">Contact</li>
-                <li class="list-item">About</li>
-                <li class="list-item">Home</li>
+                <a href="contact.html" target="_blank"><li class="list-item">Contact</li></a>
+                <a href="about.html" target="_blank"><li class="list-item">About</li></a>
+                <a href="index.html" target="_blank"><li class="list-item">Home</li></a>
             </ul>
         </nav>
     </header>
-   
+    <main>
+        <section class="contact-sec"></section>
+        <section class="contact-sec"></section>
+   </main>
     <footer class="footer">
         <div class="copy">
             <p>&copy;All Rights Reserved JohnPaul Vander Poel</p>
