--- a/about.html
+++ b/about.html
@@ -24,24 +24,11 @@
         </nav>
     </header>
     <main class="about-main">
+        <div class="main-top">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempora ea cupiditate, aliquid eligendi asperiores ipsum et maxime similique aliquam sequi dignissimos placeat iure ipsam consectetur voluptas incidunt repellendus in perferendis voluptatibus? Nesciunt quibusdam nobis facilis quas numquam accusamus nam natus enim incidunt, amet aliquam aperiam ratione ducimus! Alias facere rem iure natus officia deserunt est repellendus ipsum inventore? Reiciendis incidunt ab quod tenetur? Nostrum!</p>
+        </div>
         
     </main>
-    <section class="about-section">
-       <div class="dividers">
-           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, omnis ut! Commodi, iusto dolorem. Nesciunt, nostrum sint hic ducimus eaque at in inventore non atque!</p>
-       </div>
-       <div class="dividers">
-
-       </div>
-       <div class="dividers"></div>
-       <div class="dividers">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam, itaque quisquam, earum repudiandae ipsam sed tenetur provident, nulla fugit modi laboriosam beatae temporibus sit accusantium?</p>
-       </div>
-       <div class="dividers">
-           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, cupiditate dignissimos exercitationem dicta maiores, blanditiis ad illo officiis aspernatur atque nam obcaecati numquam reprehenderit, deserunt pariatur laboriosam expedita similique doloribus. Assumenda maxime officia fugiat vitae harum eos porro delectus, fugit voluptas, veritatis aspernatur est nemo. Explicabo, fuga voluptate? Sequi!</p>
-       </div>
-       <div class="dividers"></div>
-    </section>
     <footer class="footer">
         <div class="copy">
             <p>&copy;All Rights Reserved JohnPaul Vander Poel</p>
