--- a/about.html
+++ b/about.html
@@ -27,7 +27,18 @@
         <div class="main-top">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempora ea cupiditate, aliquid eligendi asperiores ipsum et maxime similique aliquam sequi dignissimos placeat iure ipsam consectetur voluptas incidunt repellendus in perferendis voluptatibus? Nesciunt quibusdam nobis facilis quas numquam accusamus nam natus enim incidunt, amet aliquam aperiam ratione ducimus! Alias facere rem iure natus officia deserunt est repellendus ipsum inventore? Reiciendis incidunt ab quod tenetur? Nostrum!</p>
         </div>
-        
+        <section class="about-section">
+            <div class="col"></div>
+            <div class="col"></div>
+        </section>
+        <section class="about-section">
+            <div class="col"></div>
+            <div class="col"></div>
+        </section>
+        <section class="about-section">
+            <div class="col"></div>
+            <div class="col"></div>
+        </section>
     </main>
     <footer class="footer">
         <div class="copy">
