gave detail on the sections in about and gave each page the same footer

--- a/about.html
+++ b/about.html
@@ -28,21 +28,25 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempora ea cupiditate, aliquid eligendi asperiores ipsum et maxime similique aliquam sequi dignissimos placeat iure ipsam consectetur voluptas incidunt repellendus in perferendis voluptatibus? Nesciunt quibusdam nobis facilis quas numquam accusamus nam natus enim incidunt, amet aliquam aperiam ratione ducimus! Alias facere rem iure natus officia deserunt est repellendus ipsum inventore? Reiciendis incidunt ab quod tenetur? Nostrum!</p>
         </div>
         <section class="about-section">
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="colm"></div>
+            <div class="colm"></div>
         </section>
         <section class="about-section">
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="colm"></div>
+            <div class="colm"></div>
         </section>
         <section class="about-section">
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="colm"></div>
+            <div class="colm"></div>
         </section>
     </main>
     <footer class="footer">
         <div class="copy">
-            <p>&copy;All Rights Reserved JohnPaul Vander Poel</p>
+            <p class="copyr">&copy;All Rights Reserved JohnPaul Vander Poel</p>
+        </div>
+        <div class="social">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-square"></i>
         </div>
     </footer>
 </body>
