--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,14 @@
         <section class="contact-sec"></section>
         <section class="contact-sec"></section>
    </main>
-    <footer class="footer">
-        <div class="copy">
-            <p>&copy;All Rights Reserved JohnPaul Vander Poel</p>
-        </div>
-    </footer>
+   <footer class="footer">
+    <div class="copy">
+        <p class="copyr">&copy;All Rights Reserved JohnPaul Vander Poel</p>
+    </div>
+    <div class="social">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square"></i>
+    </div>
+</footer>
 </body>
 </html>
