added new image and changed code for the background image in main

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <title>Final Site Project</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/about.css" type="text/css">
+    <script src="https://kit.fontawesome.com/e9f912ce9d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
 </head>
@@ -41,12 +42,12 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="copy">
-            <p class="copyr">&copy;All Rights Reserved JohnPaul Vander Poel</p>
-        </div>
         <div class="social">
             <i class="fab fa-instagram"></i>
             <i class="fab fa-facebook-square"></i>
+        </div>
+        <div class="copy">
+            <p class="copyr">&copy;All Rights Reserved JohnPaul Vander Poel</p>
         </div>
     </footer>
 </body>
