--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Final Site Project</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script src="https://kit.fontawesome.com/e9f912ce9d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
 </head>
@@ -27,13 +28,13 @@
         <section class="contact-sec"></section>
    </main>
    <footer class="footer">
-    <div class="copy">
-        <p class="copyr">&copy;All Rights Reserved JohnPaul Vander Poel</p>
-    </div>
     <div class="social">
         <i class="fab fa-instagram"></i>
         <i class="fab fa-facebook-square"></i>
     </div>
-</footer>
+    <div class="copy">
+        <p class="copyr">&copy;All Rights Reserved JohnPaul Vander Poel</p>
+    </div>
+    </footer>
 </body>
 </html>
