added new content on home page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main class="main">
-        <div class="cats">
+        <div class="main-text">
             <h1>
                 Cats
             </h1>
@@ -36,7 +36,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, dolorem quidem quisquam dolorum rem, eos maxime sint nulla facilis quo ratione. Accusantium commodi modi fuga accusamus quae, repudiandae eos delectus eum iusto minus asperiores perspiciatis. Minus cupiditate est dignissimos aperiam? Vel quia sunt laborum possimus? Soluta temporibus quos suscipit sed voluptate, iste nesciunt exercitationem ullam odio labore omnis voluptas atque commodi quidem, maiores excepturi similique non earum illum! Eaque facere voluptate iusto nisi illum repudiandae sapiente harum reprehenderit voluptatum dolores amet aspernatur itaque beatae impedit expedita necessitatibus magni quia porro dicta eum consequuntur et, pariatur reiciendis? Maxime culpa a fuga dolore quos nesciunt exercitationem. Eligendi laborum libero nobis distinctio! Voluptatum dicta perferendis placeat, adipisci voluptatem odit eos! Id commodi distinctio debitis, aut obcaecati natus, libero eum ex quo ducimus provident dignissimos. Tempore repudiandae quasi quod? Eligendi, cupiditate? Itaque autem culpa suscipit expedita molestias praesentium magni assumenda illo voluptates quibusdam nisi, sunt corporis deserunt dolorem, iure adipisci eligendi. Consectetur eum esse atque id nesciunt mollitia quam corrupti provident doloribus maiores sed velit magni voluptas, quo incidunt illo quia minima veniam dignissimos natus voluptate laboriosam magnam. Amet ducimus suscipit laudantium ut sequi voluptates odit modi in numquam eveniet repellendus consequatur consequuntur sint iusto ipsa a dolores, inventore voluptatem enim ea eligendi totam? Enim similique possimus explicabo suscipit at reprehenderit ducimus provident blanditiis corrupti placeat, sunt nihil eos quisquam! Expedita possimus aliquid a distinctio mollitia libero nesciunt veritatis? Quisquam animi molestias commodi consectetur fugiat repellendus et nulla eveniet soluta! Nulla quia reiciendis cum, ex consequatur voluptatibus, obcaecati porro deleniti doloremque voluptas natus assumenda! Facilis incidunt esse distinctio dolore nulla nisi! Eveniet maiores nam nulla. Magni similique animi maxime dolores est neque, esse nihil aliquam ducimus nemo quod ipsa itaque laboriosam eaque molestias cupiditate.</p>
         </div>
         <div class="col">
-            <img src="/imgs/cat col.jpg" alt="cat sittings" class="cat-col">
+            <img src="/jedigallery/saber 3.jpg" alt="jedisaber" class="cat-col">
         </div>
     </section>
     <footer class="footer">
