added a gallery with images, had the nav-bar set to a z-index, configured the about footer

--- a/about.html
+++ b/about.html
@@ -19,26 +19,35 @@
          <nav class="nav-bar">
             <ul nav-list>
                 <a href="contact.html" target="_blank"><li class="list-item">Contact</li></a>
-                <a href="about.html" target="_blank"><li class="list-item">About</li></a>
+                <a href="about.html" target="_blank"><li class="list-item">Gallery</li></a>
                 <a href="index.html" target="_blank"><li class="list-item">Home</li></a>
             </ul>
         </nav>
     </header>
     <main class="about-main">
-        <div class="main-top">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempora ea cupiditate, aliquid eligendi asperiores ipsum et maxime similique aliquam sequi dignissimos placeat iure ipsam consectetur voluptas incidunt repellendus in perferendis voluptatibus? Nesciunt quibusdam nobis facilis quas numquam accusamus nam natus enim incidunt, amet aliquam aperiam ratione ducimus! Alias facere rem iure natus officia deserunt est repellendus ipsum inventore? Reiciendis incidunt ab quod tenetur? Nostrum!</p>
-        </div>
         <section class="about-section">
-            <div class="colm"></div>
-            <div class="colm"></div>
+            <div class="colm">
+                <img src="jedigallery/saber 1.jpg" alt="saber1" class="saber1">
+            </div>
+            <div class="colm">
+                <img src="jedigallery/saber 2.jpg" alt="saber2" class="saber2">
+            </div>
         </section>
         <section class="about-section">
-            <div class="colm"></div>
-            <div class="colm"></div>
+            <div class="colm">
+                <img src="jedigallery/saber 3.jpg" alt="saber3" class="saber3">
+            </div>
+            <div class="colm">
+                <img src="jedigallery/sky 1.jpg" alt="sky1" class="sky1">
+            </div>
         </section>
         <section class="about-section">
-            <div class="colm"></div>
-            <div class="colm"></div>
+            <div class="colm">
+                <img src="jedigallery/sky 2.jpg" alt="sky2" class="sky2">
+            </div>
+            <div class="colm">
+                <img src="jedigallery/sky 3.jpg" alt="sky3" class="sky3">
+            </div>
         </section>
     </main>
     <footer class="footer">
