--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
          <nav class="nav-bar">
             <ul>
                 <a href="contact.html" target="_blank"><li class="list-item">Contact</li></a>
-                <a href="about.html" target="_blank"><li class="list-item">About</li></a>
+                <a href="about.html" target="_blank"><li class="list-item">Gallery</li></a>
                 <a href="index.html" target="_blank"><li class="list-item">Home</li></a>
             </ul>
         </nav>
