edited the h1 on the home main

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="main">
         <div class="main-text">
             <h1>
-                Cats
+                Jedi Fallen Order Photo Gallery
             </h1>
         </div>
     </main>
