--- a/about.html
+++ b/about.html
@@ -16,8 +16,9 @@
 </head>
 <body>
     <header>
-         <nav class="nav-bar">
-            <ul nav-list>
+        <nav class="nav-bar">
+            <img src="imgs/Logo-jedi-order.png" alt="jedilogo" class="logo">
+            <ul class="nav-list">
                 <a href="contact.html" target="_blank"><li class="list-item">Contact</li></a>
                 <a href="about.html" target="_blank"><li class="list-item">Gallery</li></a>
                 <a href="index.html" target="_blank"><li class="list-item">Home</li></a>
