--- a/contact.html
+++ b/contact.html
@@ -15,17 +15,19 @@
 </head>
 <body>
     <header>
-         <nav class="nav-bar">
-            <ul>
+        <nav class="nav-bar">
+            <img src="imgs/Logo-jedi-order.png" alt="jedilogo" class="logo">
+            <ul class="nav-list">
                 <a href="contact.html" target="_blank"><li class="list-item">Contact</li></a>
                 <a href="about.html" target="_blank"><li class="list-item">Gallery</li></a>
                 <a href="index.html" target="_blank"><li class="list-item">Home</li></a>
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="contact-sec"></section>
-        <section class="contact-sec"></section>
+    <main class="contact-main">
+        <section class="contact-sec">
+            <iframe height="800" title="Embedded Wufoo Form" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="https://jpforms.wufoo.com/embed/m5ba0q21xj9v3b/"> <a href="https://jpforms.wufoo.com/forms/m5ba0q21xj9v3b/">Fill out my Wufoo form!</a> </iframe>
+        </section>
    </main>
    <footer class="footer">
     <div class="social">
