--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <!-- add in meta descriptions after know what content to put in -->
     <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
+    <meta name="description" content="jedi fallen order Gallery">
+    <meta name="keywords" content="jedi, gaming, photo, cal, star wars">
+    <meta name="author" content="JohnPaul Vander Poel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Final Site Project</title>
@@ -17,7 +17,8 @@
 <body>
     <header>
          <nav class="nav-bar">
-            <ul nav-list>
+            <img src="imgs/Logo-jedi-order.png" alt="jedilogo" class="logo">
+            <ul class="nav-list">
                 <a href="contact.html" target="_blank"><li class="list-item">Contact</li></a>
                 <a href="about.html" target="_blank"><li class="list-item">Gallery</li></a>
                 <a href="index.html" target="_blank"><li class="list-item">Home</li></a>
