changed color of icons to black

--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
+    <meta name="description" content="jedi fallen order Gallery">
+    <meta name="keywords" content="jedi, gaming, photo, cal, star wars">
+    <meta name="author" content="JohnPaul Vander Poel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Final Site Project</title>
